--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "spotify-fullstack",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm start --prefix backend"
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
+    "start": "concurrently \"npm start --prefix backend\" \"npm run dev --prefix frontend\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "mongoose": "^6.7.0",
+    "dotenv": "^16.0.3",
+    "@clerk/express": "^4.0.3",
+    "concurrently": "^7.6.0"
+  }
 }
