--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
+  "name": "your-fullstack-app",
+  "version": "1.0.0",
   "scripts": {
-    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
-    "start": "concurrently \"npm start --prefix backend\" \"npm run dev --prefix frontend\""
+    "install-all": "cd backend && npm install && cd ../frontend && npm install",
+    "build": "cd frontend && npm run build",
+    "start": "cd backend && npm start",
+    "dev": "concurrently \"npm start --prefix backend\" \"npm run dev --prefix frontend\""
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
     "mongoose": "^6.7.0",
     "dotenv": "^16.0.3",
-    "@clerk/express": "^4.0.3",
+    "@clerk/express": "^4.0.3"
+  },
+  "devDependencies": {
     "concurrently": "^7.6.0"
   }
 }
