--- a/backend/package.json
+++ b/backend/package.json
@@ -3,28 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "seed:songs": "node src/seeds/songs.js",
-    "seed:albums": "node src/seeds/albums.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@clerk/express": "^1.3.48",
-    "cloudinary": "^2.5.1",
+    "@clerk/express": "^4.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-fileupload": "^1.5.1",
-    "mongoose": "^8.10.1",
-    "node-cron": "^3.0.3",
-    "socket.io": "^4.8.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.7",
+    "mongoose": "^6.7.0",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.0.1"
   }
 }
