--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,30 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "seed:songs": "node src/seeds/songs.js",
+    "seed:albums": "node src/seeds/albums.js"
   },
+  "keywords": [],
+  "type": "module",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@clerk/express": "^4.0.3",
+    "@clerk/express": "^1.3.4",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.7",
-    "mongoose": "^6.7.0",
-    "node-cron": "^3.0.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
+    "mongoose": "^8.8.0",
+    "node-cron": "^3.0.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.7"
   }
 }
