--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "spotify-fullstack",
+  "name": "spotify-clone",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
-    "start": "cd backend && npm start",
-    "dev": "concurrently \"npm start --prefix backend\" \"npm run dev --prefix frontend\""
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm start --prefix backend"
   },
-  "devDependencies": {
-    "concurrently": "^7.6.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
