--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,14 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "backend/index.js",
+      "src": "./index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "backend/index.js"
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
   ]
 }
